--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>React App</title>
+    <title>Pantry</title>
   </head>
   <body>
     <div id="root"></div>
